--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@
   color-scheme: light;
   font-family: "Lato", sans-serif;
 }
+
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+}
