--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 :root {
   color-scheme: light;
   font-family: "Lato", sans-serif;
+
+  &:has(.disable-scroll) {
+    overflow: hidden;
+  }
 }
 
 .leaflet-container {
